--- a/meta.yaml
+++ b/meta.yaml
@@ -1,17 +1,19 @@
 package:
    name : nrnpython
-   version : "7.3"
+   version : "7.5"
 
 source:
-   fn : nrn-7.3.tar.gz
-   url : http://www.neuron.yale.edu/ftp/neuron/versions/v7.3/nrn-7.3.tar.gz
+   fn : nrn-7.5.tar.gz
+   url : https://neuron.yale.edu/ftp/neuron/versions/v7.5/nrn-7.5.tar.gz
+   md5 : fb72c841374dfacbb6c2168ff57bfae9
   
 build:
-   number : 1
+   number : 2
  
 
 requirements:
    build: 
+     - {{ compiler('cxx') }}
      - python
      - readline
    run:
